<resources>
    <string name="app_name">Download app</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="channel_id">channel id</string>
    <string name="channel_name">Download channel</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="firstRadio">Glide_image Loading Library by Bump Tech</string>
    <string name="secondRadio">LoadApp-Current repository by Udacity</string>
    <string name="thirdRadio">Retrofit-Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
</resources>
