<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/custom_button">

        <RadioButton
            android:id="@+id/firstRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:onClick="onRadioButtonChecked"
            android:minHeight="48dp"
            android:text="@string/firstRadio"
            android:textSize="@dimen/default_size" />

        <RadioButton
            android:id="@+id/secondRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:minHeight="48dp"
            android:onClick="onRadioButtonChecked"
            android:layout_marginTop="10dp"
            android:text="@string/secondRadio"
            android:textSize="@dimen/default_size" />

        <RadioButton
            android:id="@+id/thirdRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_size"
            android:onClick="onRadioButtonChecked"
            android:text="@string/thirdRadio"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:minHeight="48dp" />

    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>